Fix: Alignment of the checkbox for select was wrong in Boostrap 4 and Semantic UI tables
DD-1456

--- a/css/select.bootstrap4.scss
+++ b/css/select.bootstrap4.scss
@@ -1,6 +1,7 @@
 
 
 $table-selected: #0275d8 !default;
+$checkbox-margin-top: -2px !default;
 
 @import 'select.dataTables.scss';
 
